Update GC.md
Signed-off-by: Ziming Meng <zimingm94@gmail.com>